_build/default/lib/parser.output
   0  $accept : %entry% $end

   1  program : function_def_list EOF

   2  function_def_list :
   3                    | function_def function_def_list

   4  function_def : function_type ID LPAREN params RPAREN body

   5  function_type : VOID
   6                | INT

   7  params :
   8         | param_list

   9  param_list : param
  10             | param COMMA param_list

  11  param : INT ID

  12  body : LBRACE stmt_list RBRACE

  13  stmt_list :
  14            | stmt stmt_list

  15  stmt : SEMI
  16       | expr SEMI
  17       | ID ASSIGN expr SEMI
  18       | INT ID ASSIGN expr SEMI
  19       | INT ID SEMI
  20       | RETURN expr SEMI
  21       | RETURN SEMI
  22       | LBRACE stmt_list RBRACE
  23       | IF LPAREN expr RPAREN stmt
  24       | IF LPAREN expr RPAREN stmt ELSE stmt
  25       | WHILE LPAREN expr RPAREN stmt
  26       | BREAK SEMI
  27       | CONTINUE SEMI

  28  expr : NUM
  29       | ID
  30       | LPAREN expr RPAREN
  31       | SUB expr
  32       | ADD expr
  33       | NOT expr
  34       | expr ADD expr
  35       | expr SUB expr
  36       | expr MUL expr
  37       | expr DIV expr
  38       | expr MOD expr
  39       | expr EQ expr
  40       | expr NE expr
  41       | expr LT expr
  42       | expr GT expr
  43       | expr LE expr
  44       | expr GE expr
  45       | expr AND expr
  46       | expr OR expr
  47       | ID LPAREN args RPAREN

  48  args :
  49       | arg_list

  50  arg_list : expr
  51           | expr COMMA arg_list

  52  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (52)
	function_def_list : .  (2)

	INT  shift 3
	VOID  shift 4
	EOF  reduce 2

	program  goto 5
	function_def_list  goto 6
	function_def  goto 7
	function_type  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	function_type : INT .  (6)

	.  reduce 6


state 4
	function_type : VOID .  (5)

	.  reduce 5


state 5
	%entry% : '\001' program .  (52)

	.  reduce 52


state 6
	program : function_def_list . EOF  (1)

	EOF  shift 9
	.  error


state 7
	function_def_list : function_def . function_def_list  (3)
	function_def_list : .  (2)

	INT  shift 3
	VOID  shift 4
	EOF  reduce 2

	function_def_list  goto 10
	function_def  goto 7
	function_type  goto 8


state 8
	function_def : function_type . ID LPAREN params RPAREN body  (4)

	ID  shift 11
	.  error


state 9
	program : function_def_list EOF .  (1)

	.  reduce 1


state 10
	function_def_list : function_def function_def_list .  (3)

	.  reduce 3


state 11
	function_def : function_type ID . LPAREN params RPAREN body  (4)

	LPAREN  shift 12
	.  error


state 12
	function_def : function_type ID LPAREN . params RPAREN body  (4)
	params : .  (7)

	INT  shift 13
	RPAREN  reduce 7

	params  goto 14
	param_list  goto 15
	param  goto 16


state 13
	param : INT . ID  (11)

	ID  shift 17
	.  error


state 14
	function_def : function_type ID LPAREN params . RPAREN body  (4)

	RPAREN  shift 18
	.  error


state 15
	params : param_list .  (8)

	.  reduce 8


state 16
	param_list : param .  (9)
	param_list : param . COMMA param_list  (10)

	COMMA  shift 19
	RPAREN  reduce 9


state 17
	param : INT ID .  (11)

	.  reduce 11


state 18
	function_def : function_type ID LPAREN params RPAREN . body  (4)

	LBRACE  shift 20
	.  error

	body  goto 21


state 19
	param_list : param COMMA . param_list  (10)

	INT  shift 13
	.  error

	param_list  goto 22
	param  goto 16


state 20
	body : LBRACE . stmt_list RBRACE  (12)
	stmt_list : .  (13)

	INT  shift 23
	IF  shift 24
	WHILE  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	RETURN  shift 28
	ID  shift 29
	NUM  shift 30
	SEMI  shift 31
	LPAREN  shift 32
	LBRACE  shift 33
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	RBRACE  reduce 13

	stmt_list  goto 37
	stmt  goto 38
	expr  goto 39


state 21
	function_def : function_type ID LPAREN params RPAREN body .  (4)

	.  reduce 4


state 22
	param_list : param COMMA param_list .  (10)

	.  reduce 10


state 23
	stmt : INT . ID ASSIGN expr SEMI  (18)
	stmt : INT . ID SEMI  (19)

	ID  shift 40
	.  error


state 24
	stmt : IF . LPAREN expr RPAREN stmt  (23)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (24)

	LPAREN  shift 41
	.  error


state 25
	stmt : WHILE . LPAREN expr RPAREN stmt  (25)

	LPAREN  shift 42
	.  error


state 26
	stmt : BREAK . SEMI  (26)

	SEMI  shift 43
	.  error


state 27
	stmt : CONTINUE . SEMI  (27)

	SEMI  shift 44
	.  error


state 28
	stmt : RETURN . expr SEMI  (20)
	stmt : RETURN . SEMI  (21)

	ID  shift 45
	NUM  shift 30
	SEMI  shift 46
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 47


state 29
	stmt : ID . ASSIGN expr SEMI  (17)
	expr : ID .  (29)
	expr : ID . LPAREN args RPAREN  (47)

	ASSIGN  shift 48
	LPAREN  shift 49
	SEMI  reduce 29
	ADD  reduce 29
	SUB  reduce 29
	MUL  reduce 29
	DIV  reduce 29
	MOD  reduce 29
	AND  reduce 29
	OR  reduce 29
	LT  reduce 29
	GT  reduce 29
	LE  reduce 29
	GE  reduce 29
	EQ  reduce 29
	NE  reduce 29


state 30
	expr : NUM .  (28)

	.  reduce 28


state 31
	stmt : SEMI .  (15)

	.  reduce 15


state 32
	expr : LPAREN . expr RPAREN  (30)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 50


state 33
	stmt : LBRACE . stmt_list RBRACE  (22)
	stmt_list : .  (13)

	INT  shift 23
	IF  shift 24
	WHILE  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	RETURN  shift 28
	ID  shift 29
	NUM  shift 30
	SEMI  shift 31
	LPAREN  shift 32
	LBRACE  shift 33
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	RBRACE  reduce 13

	stmt_list  goto 51
	stmt  goto 38
	expr  goto 39


state 34
	expr : ADD . expr  (32)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 52


state 35
	expr : SUB . expr  (31)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 53


state 36
	expr : NOT . expr  (33)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 54


state 37
	body : LBRACE stmt_list . RBRACE  (12)

	RBRACE  shift 55
	.  error


state 38
	stmt_list : stmt . stmt_list  (14)
	stmt_list : .  (13)

	INT  shift 23
	IF  shift 24
	WHILE  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	RETURN  shift 28
	ID  shift 29
	NUM  shift 30
	SEMI  shift 31
	LPAREN  shift 32
	LBRACE  shift 33
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	RBRACE  reduce 13

	stmt_list  goto 56
	stmt  goto 38
	expr  goto 39


state 39
	stmt : expr . SEMI  (16)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	SEMI  shift 57
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	.  error


state 40
	stmt : INT ID . ASSIGN expr SEMI  (18)
	stmt : INT ID . SEMI  (19)

	ASSIGN  shift 71
	SEMI  shift 72
	.  error


state 41
	stmt : IF LPAREN . expr RPAREN stmt  (23)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (24)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 73


state 42
	stmt : WHILE LPAREN . expr RPAREN stmt  (25)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 74


state 43
	stmt : BREAK SEMI .  (26)

	.  reduce 26


state 44
	stmt : CONTINUE SEMI .  (27)

	.  reduce 27


state 45
	expr : ID .  (29)
	expr : ID . LPAREN args RPAREN  (47)

	LPAREN  shift 49
	SEMI  reduce 29
	COMMA  reduce 29
	RPAREN  reduce 29
	ADD  reduce 29
	SUB  reduce 29
	MUL  reduce 29
	DIV  reduce 29
	MOD  reduce 29
	AND  reduce 29
	OR  reduce 29
	LT  reduce 29
	GT  reduce 29
	LE  reduce 29
	GE  reduce 29
	EQ  reduce 29
	NE  reduce 29


state 46
	stmt : RETURN SEMI .  (21)

	.  reduce 21


state 47
	stmt : RETURN expr . SEMI  (20)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	SEMI  shift 75
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	.  error


state 48
	stmt : ID ASSIGN . expr SEMI  (17)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 76


state 49
	expr : ID LPAREN . args RPAREN  (47)
	args : .  (48)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	RPAREN  reduce 48

	expr  goto 77
	args  goto 78
	arg_list  goto 79


state 50
	expr : LPAREN expr . RPAREN  (30)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	RPAREN  shift 80
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	.  error


state 51
	stmt : LBRACE stmt_list . RBRACE  (22)

	RBRACE  shift 81
	.  error


state 52
	expr : ADD expr .  (32)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	.  reduce 32


state 53
	expr : SUB expr .  (31)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	.  reduce 31


state 54
	expr : NOT expr .  (33)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	.  reduce 33


state 55
	body : LBRACE stmt_list RBRACE .  (12)

	.  reduce 12


state 56
	stmt_list : stmt stmt_list .  (14)

	.  reduce 14


state 57
	stmt : expr SEMI .  (16)

	.  reduce 16


state 58
	expr : expr ADD . expr  (34)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 82


state 59
	expr : expr SUB . expr  (35)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 83


state 60
	expr : expr MUL . expr  (36)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 84


state 61
	expr : expr DIV . expr  (37)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 85


state 62
	expr : expr MOD . expr  (38)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 86


state 63
	expr : expr AND . expr  (45)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 87


state 64
	expr : expr OR . expr  (46)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 88


state 65
	expr : expr LT . expr  (41)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 89


state 66
	expr : expr GT . expr  (42)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 90


state 67
	expr : expr LE . expr  (43)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 91


state 68
	expr : expr GE . expr  (44)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 92


state 69
	expr : expr EQ . expr  (39)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 93


state 70
	expr : expr NE . expr  (40)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 94


state 71
	stmt : INT ID ASSIGN . expr SEMI  (18)

	ID  shift 45
	NUM  shift 30
	LPAREN  shift 32
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 95


state 72
	stmt : INT ID SEMI .  (19)

	.  reduce 19


state 73
	stmt : IF LPAREN expr . RPAREN stmt  (23)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (24)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	RPAREN  shift 96
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	.  error


state 74
	stmt : WHILE LPAREN expr . RPAREN stmt  (25)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	RPAREN  shift 97
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	.  error


state 75
	stmt : RETURN expr SEMI .  (20)

	.  reduce 20


state 76
	stmt : ID ASSIGN expr . SEMI  (17)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	SEMI  shift 98
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	.  error


state 77
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	arg_list : expr .  (50)
	arg_list : expr . COMMA arg_list  (51)

	COMMA  shift 99
	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	OR  shift 64
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	RPAREN  reduce 50


state 78
	expr : ID LPAREN args . RPAREN  (47)

	RPAREN  shift 100
	.  error


state 79
	args : arg_list .  (49)

	.  reduce 49


state 80
	expr : LPAREN expr RPAREN .  (30)

	.  reduce 30


state 81
	stmt : LBRACE stmt_list RBRACE .  (22)

	.  reduce 22


state 82
	expr : expr . ADD expr  (34)
	expr : expr ADD expr .  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	SEMI  reduce 34
	COMMA  reduce 34
	RPAREN  reduce 34
	ADD  reduce 34
	SUB  reduce 34
	AND  reduce 34
	OR  reduce 34
	LT  reduce 34
	GT  reduce 34
	LE  reduce 34
	GE  reduce 34
	EQ  reduce 34
	NE  reduce 34


state 83
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr SUB expr .  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	SEMI  reduce 35
	COMMA  reduce 35
	RPAREN  reduce 35
	ADD  reduce 35
	SUB  reduce 35
	AND  reduce 35
	OR  reduce 35
	LT  reduce 35
	GT  reduce 35
	LE  reduce 35
	GE  reduce 35
	EQ  reduce 35
	NE  reduce 35


state 84
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr MUL expr .  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	.  reduce 36


state 85
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr DIV expr .  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	.  reduce 37


state 86
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr MOD expr .  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	.  reduce 38


state 87
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr AND expr .  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	SEMI  reduce 45
	COMMA  reduce 45
	RPAREN  reduce 45
	AND  reduce 45
	OR  reduce 45


state 88
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
	expr : expr OR expr .  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	AND  shift 63
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	EQ  shift 69
	NE  shift 70
	SEMI  reduce 46
	COMMA  reduce 46
	RPAREN  reduce 46
	OR  reduce 46


state 89
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr LT expr .  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	SEMI  reduce 41
	COMMA  reduce 41
	RPAREN  reduce 41
	AND  reduce 41
	OR  reduce 41
	LT  reduce 41
	GT  reduce 41
	LE  reduce 41
	GE  reduce 41
	EQ  reduce 41
	NE  reduce 41


state 90
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr GT expr .  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	SEMI  reduce 42
	COMMA  reduce 42
	RPAREN  reduce 42
	AND  reduce 42
	OR  reduce 42
	LT  reduce 42
	GT  reduce 42
	LE  reduce 42
	GE  reduce 42
	EQ  reduce 42
	NE  reduce 42


state 91
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr LE expr .  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	SEMI  reduce 43
	COMMA  reduce 43
	RPAREN  reduce 43
	AND  reduce 43
	OR  reduce 43
	LT  reduce 43
	GT  reduce 43
	LE  reduce 43
	GE  reduce 43
	EQ  reduce 43
	NE  reduce 43


state 92
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr GE expr .  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	SEMI  reduce 44
	COMMA  reduce 44
	RPAREN  reduce 44
	AND  reduce 44
	OR  reduce 44
	LT  reduce 44
	GT  reduce 44
	LE  reduce 44
	GE  reduce 44
	EQ  reduce 44
	NE  reduce 44


state 93
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr EQ expr .  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	SEMI  reduce 39
	COMMA  reduce 39
	RPAREN  reduce 39
	AND  reduce 39
	OR  reduce 39
	EQ  reduce 39
	NE  reduce 39


state 94
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr NE expr .  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)

	ADD  shift 58
	SUB  shift 59
	MUL  shift 60
	DIV  shift 61
	MOD  shift 62
	LT  shift 65
	GT  shift 66
	LE  shift 67
	GE  shift 68
	SEMI  reduce 40
	COMMA  reduce 40
	RPAREN  reduce 40
	AND  reduce 40
	OR  reduce 40
	EQ  reduce 40
	NE  reduce 40


state 95
	stmt : INT ID ASSIGN expr . SEMI  (18)
	expr : expr . ADD expr  (34)
	expr : expr . SUB expr  (35)
	expr : expr . MUL expr  (36)
	expr : expr . DIV expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NE expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . LE expr  (43)
	expr : expr . GE expr  (44)
	expr : expr . AND expr  (45)
	expr : expr . OR expr  (46)
